translate and fix RTL layout (WIP)

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -40,7 +40,7 @@
             android:layout_weight="3"
             android:fontFamily="@font/museo_san_rounded900"
             android:gravity="center"
-            android:text="Unita VPN"
+            android:text="@string/unita_vpn"
             android:textColor="@color/lightBlue"
             android:textSize="30sp" />
 
@@ -72,7 +72,7 @@
         android:layout_marginTop="100dp"
         android:fontFamily="@font/museo_san_rounded700"
         android:padding="5dp"
-        android:text="+30 min"
+        android:text="@string/plus_thirty_minutes"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/laPulseButton"
@@ -101,7 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/laPulseButton"
         android:layout_marginTop="-50dp"
-        android:text="Connect"
+        android:text="@string/dashboard_connect"
         android:fontFamily="@font/museo_san_rounded700"
         android:textSize="14sp"
         android:textColor="@color/white"
@@ -132,8 +132,8 @@
         android:layout_marginTop="5dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:paddingRight="15dp"
-        android:paddingLeft="15dp"
+        android:paddingEnd="15dp"
+        android:paddingStart="15dp"
         android:background="@drawable/background_server_list"
         app:layout_constraintBottom_toTopOf="@+id/llServers"
         app:layout_constraintEnd_toEndOf="parent"
@@ -153,9 +153,9 @@
             android:id="@+id/tvPremium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/museo_san_rounded500"
-            android:text="Premium"
+            android:text="@string/premium"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -179,7 +179,7 @@
             android:id="@+id/ivAll"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/ic_all_colorfull"
@@ -191,7 +191,7 @@
             android:id="@+id/ivMtn"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/ic_mtn_irancell_gray"
@@ -203,7 +203,7 @@
             android:id="@+id/ivMci"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/ic_mci_hamrahe_aval_gray"
@@ -215,7 +215,7 @@
             android:id="@+id/clIconPing"
             android:layout_width="38dp"
             android:layout_height="38dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/background_enter_btn"
             android:clickable="true"
             android:focusable="true"
@@ -291,7 +291,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="20"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:fontFamily="@font/museo_san_rounded700"
             android:textSize="14sp"
             android:textColor="@color/white"
@@ -302,7 +302,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:fontFamily="@font/museo_san_rounded700"
             android:textSize="14sp"
             android:textColor="@color/lightGray"
