--- a/app/src/main/res/layout/activity_premium.xml
+++ b/app/src/main/res/layout/activity_premium.xml
@@ -31,9 +31,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:fontFamily="@font/museo_san_rounded900"
-            android:text="Premium"
+            android:text="@string/premium"
             android:textSize="18sp"
             android:textColor="@color/material_amber_200"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,9 +44,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:fontFamily="@font/museo_san_rounded900"
-            android:text="Account"
+            android:text="@string/account"
             android:textSize="18sp"
             android:textColor="@color/material_amber_200"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:src="@drawable/ic_angle_circle_left"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -77,7 +77,7 @@
             android:id="@+id/ivCheckMark_1"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
             android:src="@drawable/ic_checkmark"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -86,9 +86,9 @@
             android:id="@+id/tvTitle1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:fontFamily="@font/museo_san_rounded700"
-            android:text="Ultra-fast connection speed"
+            android:text="@string/ultra_fast_connection_speed"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/ivCheckMark_1"
             app:layout_constraintStart_toStartOf="@+id/ivCheckMark_1"
@@ -98,7 +98,7 @@
             android:id="@+id/ivCheckMark_2"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/ic_checkmark"
             app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/museo_san_rounded700"
-            android:text="Access to premium vitual locations"
+            android:text="@string/access_to_premium_virtual_locations"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/ivCheckMark_2"
             app:layout_constraintStart_toEndOf="@+id/ivCheckMark_2"
@@ -120,7 +120,7 @@
             android:id="@+id/ivCheckMark_3"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/ic_checkmark"
             app:layout_constraintStart_toStartOf="parent"
@@ -132,7 +132,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/museo_san_rounded700"
-            android:text="Ad-free experience"
+            android:text="@string/ad_free_experience"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/ivCheckMark_3"
             app:layout_constraintStart_toEndOf="@+id/ivCheckMark_3"
@@ -142,7 +142,7 @@
             android:id="@+id/ivCheckMark_4"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/ic_checkmark"
             app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +154,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/museo_san_rounded700"
-            android:text="No time limit"
+            android:text="@string/no_time_limit"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/ivCheckMark_4"
             app:layout_constraintStart_toEndOf="@+id/ivCheckMark_4"
@@ -175,12 +175,12 @@
             android:id="@+id/cl30Days"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/background_premium"
-            android:paddingLeft="30dp"
+            android:paddingStart="30dp"
             android:paddingTop="10dp"
-            android:paddingRight="30dp"
+            android:paddingEnd="30dp"
             android:paddingBottom="10dp"
             android:clickable="true"
             android:focusable="true"
@@ -192,7 +192,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/museo_san_rounded500"
-                android:text="30 Days"
+                android:text="@string/thirty_days"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -218,11 +218,11 @@
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginEnd="30dp"
             android:background="@drawable/background_server_list"
-            android:paddingLeft="30dp"
+            android:paddingStart="30dp"
             android:paddingTop="10dp"
-            android:paddingRight="30dp"
+            android:paddingEnd="30dp"
             android:paddingBottom="10dp"
             android:clickable="true"
             android:focusable="true"
@@ -234,7 +234,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/museo_san_rounded500"
-                android:text="90 Days"
+                android:text="@string/ninety_days"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -259,12 +259,12 @@
             android:id="@+id/cl180Days"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/background_server_list"
-            android:paddingLeft="30dp"
+            android:paddingStart="30dp"
             android:paddingTop="10dp"
-            android:paddingRight="30dp"
+            android:paddingEnd="30dp"
             android:paddingBottom="10dp"
             android:clickable="true"
             android:focusable="true"
@@ -276,7 +276,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/museo_san_rounded500"
-                android:text="180 Days"
+                android:text="@string/One_hundred_and_eighty_days"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -302,11 +302,11 @@
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginEnd="30dp"
             android:background="@drawable/background_server_list"
-            android:paddingLeft="30dp"
+            android:paddingStart="30dp"
             android:paddingTop="10dp"
-            android:paddingRight="30dp"
+            android:paddingEnd="30dp"
             android:paddingBottom="10dp"
             android:clickable="true"
             android:focusable="true"
@@ -318,7 +318,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/museo_san_rounded500"
-                android:text="365 Days"
+                android:text="@string/Three_hundred_and_sixty_five_days"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -356,7 +356,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/background_enter_btn"
             android:fontFamily="@font/museo_san_rounded700"
-            android:text="PAY"
+            android:text="@string/pay"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
