--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -17,8 +17,8 @@
             android:id="@+id/generalLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginTop="40dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,8 +50,8 @@
             android:id="@+id/locationLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/background_nav_item"
             android:orientation="horizontal"
@@ -72,7 +72,7 @@
                 android:id="@+id/tvGeneralTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="2"
                 android:fontFamily="@font/museo_san_rounded700"
                 android:text="Location Order"
@@ -84,7 +84,7 @@
                 android:id="@+id/tvGeneral"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="20"
                 android:fontFamily="@font/museo_san_rounded700"
                 android:gravity="end"
@@ -106,8 +106,8 @@
             android:id="@+id/tvGeneralInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:fontFamily="@font/museo_san_rounded700"
             android:background="@drawable/background_nav_item_info"
             android:text="Arange the Location List in ascending order of the alphabet, geography or latency."
@@ -123,8 +123,8 @@
             android:id="@+id/DisplaylatencyLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/background_nav_item"
             android:orientation="horizontal"
@@ -145,7 +145,7 @@
                 android:id="@+id/tvDisplaylatencyTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="2"
                 android:fontFamily="@font/museo_san_rounded700"
                 android:text="Display Latency"
@@ -157,7 +157,7 @@
                 android:id="@+id/tvDisplaylatency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="20"
                 android:fontFamily="@font/museo_san_rounded700"
                 android:gravity="end"
@@ -179,8 +179,8 @@
             android:id="@+id/tvDisplaylatencyInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:fontFamily="@font/museo_san_rounded700"
             android:background="@drawable/background_nav_item_info"
             android:text="Display latency as signal strength bar or in milliseconds."
@@ -196,8 +196,8 @@
             android:id="@+id/LanguageLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/background_nav_item"
             android:orientation="horizontal"
@@ -218,7 +218,7 @@
                 android:id="@+id/tvLanguageLayoutTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="2"
                 android:fontFamily="@font/museo_san_rounded700"
                 android:text="Language"
@@ -230,7 +230,7 @@
                 android:id="@+id/tvLanguage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="20"
                 android:fontFamily="@font/museo_san_rounded700"
                 android:gravity="end"
@@ -252,8 +252,8 @@
             android:id="@+id/tvLanguageInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:fontFamily="@font/museo_san_rounded700"
             android:background="@drawable/background_nav_item_info"
             android:text="Localize supported language."
@@ -269,8 +269,8 @@
             android:id="@+id/AppearanceLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/background_nav_item"
             android:orientation="horizontal"
@@ -291,7 +291,7 @@
                 android:id="@+id/tvAppearanceTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="2"
                 android:fontFamily="@font/museo_san_rounded700"
                 android:text="Appearance"
@@ -303,7 +303,7 @@
                 android:id="@+id/tvAppearance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="20"
                 android:fontFamily="@font/museo_san_rounded700"
                 android:gravity="end"
@@ -325,8 +325,8 @@
             android:id="@+id/tvAppearanceInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:fontFamily="@font/museo_san_rounded700"
             android:background="@drawable/background_nav_item_info"
             android:text="Light or Dark"
@@ -342,8 +342,8 @@
             android:id="@+id/VersionLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/background_nav_item"
             android:orientation="horizontal"
@@ -357,7 +357,7 @@
                 android:id="@+id/VersionTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="2"
                 android:fontFamily="@font/museo_san_rounded700"
                 android:text="Version"
@@ -369,7 +369,7 @@
                 android:id="@+id/tvVersion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="20"
                 android:fontFamily="@font/museo_san_rounded700"
                 android:gravity="end"
