--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,12 +20,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/museo_san_rounded900"
-        android:text="Login"
+        android:text="@string/login"
         android:textSize="50sp"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:layout_marginTop="52dp"
-        android:layout_marginLeft="70dp"
+        android:layout_marginStart="70dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,9 +34,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:fontFamily="@font/museo_san_rounded700"
-        android:text="Email:"
+        android:text="@string/email"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -48,12 +48,12 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:paddingLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:paddingStart="20dp"
         android:background="@drawable/background_edit_text"
         android:fontFamily="@font/museo_san_rounded500"
-        android:hint="Enter Your Email"
+        android:hint="@string/enter_your_email"
         android:inputType="textEmailAddress"
         android:textColor="@color/darkGray"
         android:textSize="18sp"
@@ -66,9 +66,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:fontFamily="@font/museo_san_rounded700"
-        android:text="Password:"
+        android:text="@string/password_"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -80,12 +80,12 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:paddingLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:paddingStart="20dp"
         android:background="@drawable/background_edit_text"
         android:fontFamily="@font/museo_san_rounded500"
-        android:hint="Enter Your Password"
+        android:hint="@string/enter_your_password"
         android:inputType="textPassword"
         android:textColor="@color/darkGray"
         android:textSize="18sp"
@@ -97,7 +97,7 @@
         android:id="@+id/passwordToggle"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:src="@drawable/ic_password_hide"
         android:clickable="true"
         android:focusable="true"
@@ -110,12 +110,12 @@
         android:id="@+id/tvForgetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="@font/museo_san_rounded500"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password"
         android:textColor="@color/lightBlue"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -142,11 +142,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:paddingLeft="60dp"
-        android:paddingRight="60dp"
+        android:paddingStart="60dp"
+        android:paddingEnd="60dp"
         android:background="@drawable/background_enter_btn"
         android:fontFamily="@font/museo_san_rounded900"
-        android:text="Login"
+        android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="26sp"
         android:textStyle="bold"
@@ -162,7 +162,7 @@
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="@font/museo_san_rounded500"
-        android:text="New User? Signup"
+        android:text="@string/new_user_signup"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -193,7 +193,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/museo_san_rounded500"
-            android:text="Or Login With"
+            android:text="@string/or_login_with"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
@@ -211,8 +211,8 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="40dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/login_background"
@@ -243,7 +243,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:fontFamily="@font/museo_san_rounded500"
-                android:text="Facebook"
+                android:text="@string/facebook"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -272,7 +272,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:fontFamily="@font/museo_san_rounded500"
-                android:text="Google"
+                android:text="@string/google"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
