--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -19,7 +19,7 @@
             android:id="@+id/llSelectedView"
             android:layout_width="4dp"
             android:layout_height="24dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:background="?selectedColorPrimary"
             android:orientation="horizontal"
             android:visibility="invisible">
