--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/museo_san_rounded700"
-        android:text="@string/best_iranian_vpn"
+        android:text="@string/welcome_title"
         android:textColor="@color/white"
         android:textSize="40sp"
         android:textStyle="bold"
